# NCL

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  test.yml
src/ncl/: Calculation.py  CalculationResults.py  Constants.py  ICalculation.py  InputFile.py  Molecule.py  OrcaCalculation.py  OrcaCalculationResults.py  OrcaDockerCalculation.py  OrcaInputFile.py  OrcaOutputFile.py  __init__.py
src/ncl/Orca/: OrcaCalculation.py  OrcaCalculationResults.py  OrcaDockerCalculation.py  OrcaInputFile.py  OrcaOutputFile.py  __init__.py
src/ncl/Orca/Pipelines/: OrcaGeoOpt.py  __init__.py
tests/: test_Calculation.py  test_CalculationResults.py  test_InputFile.py  test_Molecule.py  test_OrcaCalculation.py  test_OrcaDockerCalculation.py  test_OrcaInputFile.py
tests/Orca/: test_OrcaCalculation.py  test_OrcaCalculationResults.py  test_OrcaDockerCalculation.py  test_OrcaGeoOpt.py  test_OrcaInputFile.py  test_OrcaOutputFile.py
tests/Resources/: Acetaminophen-GeoOpt.out  Propane-GeoOpt.out
