[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ncl"
version = "0.0.1"
description = "A Python Library developed Quantum Chemistry Calculation Dispatching and Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "MrDNAlex", email = "mr.dnalex.2003@gmail.com" }]
keywords = ["nanotech", "chem", "utils"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.3.2"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[project.urls]
Homepage = "https://github.com/Nano-DNA-Studios/NCL"
Issues = "https://github.com/Nano-DNA-Studios/NCL/issues"

# If you want a CLI: installs a console command named `your-lib`
[project.scripts]
ncl = "ncl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ncl"]
